# chasqui-server

./: .dockerignore  .env  .env.containers.default  .env.default  .env.example  .gitignore  BUILD.md  Cargo.toml  Dockerfile  GEMINI.md  README.md  build.sh  buildlog.txt  changes.diff  docker-compose.deploy.yml  docker-compose.yml  publish-container-images.sh  run-server.sh
.sqlx/: query-44850a010803143d9592cef386a46947c4a344c3830de48c2f05851c016f162f.json  query-52cb1ab454763eeac6582c9ec337c3f4389cb62e9a419af52f37e585400dee24.json  query-57a4852089f1d3ae0942630f99390d040064529948beda2427a71cc4752e3bfb.json  query-57ce732db7dd452767d65df86df8a4af1588b8a4069d25ea54423ebbb9d61f31.json  query-72d8c4e9b03c3b9562cfa017170e842ccab12c1b4f380d3396e26d6687a93457.json  query-c240314fd6ba700ae933ae5b8bfdc9dedafc4556c479c58ebcc110ee9dc3b6f9.json  query-d94fe4f55abb2404774f410e921d36e34db9912c8954f5539061fd9f755f3f89.json  query-ec26eb5958efb3a07b878c66eadf334e378022eaebd51918eb84fd2d271d6fd9.json
cli/: Cargo.toml
core/: Cargo.toml
core/src/: config.rs  lib.rs  notifier.rs  testutil.rs
core/src/features/: mod.rs  model.rs
core/src/features/assets/: metadata.rs  mod.rs  model.rs
core/src/features/assets/audio/: model.rs
core/src/features/assets/images/: model.rs
core/src/features/assets/videos/: model.rs
core/src/features/pages/: model.rs
core/src/io/: local.rs  mod.rs  path_utils.rs
core/src/parser/: markdown.rs  mod.rs  model.rs
core/tests/: unit_io_path_verification.rs  unit_markdown_pages_parser.rs
db/: Cargo.toml  dev.db
db/.sqlx/: query-263a76c33b0d9a8ac377b90e529fb30506e51308445994b5d767f8423a949e40.json  query-2913e0173787dfea7689445c8f4c9d7032a775a638ab714cf423b0c2b09c520c.json  query-2c99c34f93bcc6e2ff38176d1f2bbd7e1611456f149b7563831a17dc281c417e.json  query-424b2b56b0063dd965e59ee5ed21c6e75fe650ad3c99bb6e7f3aa8e1c5044a82.json  query-48284135c037e3d7d85f0da2c3db579481fbee6451968916cc6679a5e4527886.json  query-61eaf68581a9d494a3c30a70d1b9a7d6394729f2f50f74983047b9447492a5ca.json  query-85178354c64032e9291ec486e5703410189b67a00436036cb17953ccd655097d.json  query-93c3345e32fda0c08212bfd07231fbaae2cc26aab46c96539be15fec2764a835.json  query-a7288ae7ce7940da49ec43a5a9bc5ab481a4e693cd3ddfc93ca71cd346d8d31e.json  query-aaac8d73e7c01b345744f614b02ae0ee8e4bb657d2a40ddda0cf93a12ccc35a4.json  query-b48fb0b5c550c227e7865edae6adaa4e037ea3fd441ef4323ab758ff6e2a8eca.json  query-bfdc2e9c96a648c507dcfa6e058502f1775a950dab900b1db53086542e93321b.json  query-c5399b22d79bc340f97f0ee72061cbcbbff52da327d2fe1c1ff183cfd619b166.json  query-d8e61c4cf86ea9d1caf5bac0d2ef98a4cfcc86fe530a0ede9ab8a379cd1adb1f.json  query-dd2bbb9a948eef80cbae28377a344710a3db1903ab6be57bb4d8f0d4dfd3477e.json  query-ec2675de703e4c3674db2c6da36fd55b87bc2122586ea1e011a79066e6398993.json
db/migrations/: 20260216080722_create_pages_table.sql  20260228130220_create_assets_tables.sql
db/src/: lib.rs  sqlite.rs  testutil.rs
db/src/repo/: audio.rs  images.rs  mod.rs  pages.rs  videos.rs
db/tests/: unit_models_pages.rs  unit_sqlite_pages_database.rs
migrations/: 20260216080722_create_pages_table.sql
server/: Cargo.toml
server/src/: app.rs  lib.rs  main.rs  testutil.rs
server/src/features/: factory.rs  handlers.rs  mod.rs  routing.rs
server/src/features/assets/: mod.rs
server/src/features/assets/audio/: service.rs
server/src/features/assets/images/: service.rs
server/src/features/assets/videos/: service.rs
server/src/features/pages/: mod.rs  service.rs
server/src/services/: mod.rs
server/src/services/cache/: mod.rs  models.rs
server/src/services/sync/: mod.rs  sync.rs
server/src/services/sync/manifest/: claim.rs  mod.rs
server/src/watcher/: mod.rs  watcher.rs
server/tests/: api_pages_router.rs  api_pages_stress.rs  integration_pages_directory_watcher.rs  integration_sync_build_webhook.rs  integration_sync_core.rs  integration_sync_corrupt_data.rs  integration_sync_database_hazards.rs  integration_sync_filesystem_hazards.rs  integration_sync_large_files.rs  integration_sync_media.rs  integration_watcher_mounts.rs
server/tests/common/: mod.rs
src/: config.rs  db.rs  main.rs  pages.rs
src/database/: mod.rs  sqlite.rs
src/domain/: page.rs
src/features/: handlers.rs  mod.rs  model.rs  routing.rs  watcher.rs
src/io/: local.rs  mod.rs  path_utils.rs
src/parser/: markdown.rs  model.rs
src/services/: mod.rs  sync.rs
src/tests/: api_pages_router.rs  api_pages_stress.rs  integration_pages_directory_watcher.rs  integration_pages_sync_service.rs  integration_sync_build_webhook.rs  integration_sync_core.rs  integration_sync_corrupt_data.rs  integration_sync_database_hazards.rs  integration_sync_filesystem_hazards.rs  integration_sync_large_files.rs  integration_sync_media.rs  integration_watcher_mounts.rs  mocks.rs  mod.rs  unit_io_path_verification.rs  unit_markdown_pages_parser.rs  unit_models_pages.rs  unit_sqlite_pages_database.rs
src/watcher/: watcher.rs
(+26 files in other folders)
