[package]
name = "chasqui-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
chrono = "0.4.42"
derive_more = { version = "2.1.0", features = ["display"] }
dotenv = "0.15.0"
gray_matter = "0.3.2"
pulldown-cmark = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "=0.8.6", features = [
  "runtime-tokio",
  "tls-native-tls",
  "sqlite",
  "chrono",
  "macros",
] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["fs"] }
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
