[package]
name = "chasqui-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.100"
async-trait = "=0.1.89"
axum = "=0.8.7"
chrono = { version = "=0.4.42", features = ["serde"] }
derive_more = { version = "=2.1.0", features = ["display"] }
dotenv = "=0.15.0"
gray_matter = "=0.3.2"
http = "=1.2"
notify = "=8.2.0"
pulldown-cmark = "=0.13.0"
reqwest = { version = "=0.13.2", features = ["json", "rustls"], default-features = false }
rand = "=0.9.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.138"
sqlx = { version = "=0.8.6", features = [
  "runtime-tokio",
  "tls-rustls-ring",
  "sqlite",
  "chrono",
  "uuid",
  "macros",
] }
image = "=0.25.5"
lofty = "=0.21.1"
mp4 = "=0.14.0"
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "=0.5.2", features = ["util"] }
tower-http = { version = "=0.6.8", features = ["fs"] }
walkdir = "=2.5.0"
xxhash-rust = { version = "=0.8.15", features = ["xxh3"] }
uuid = { version = "=1.12.1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.17"
