[package]
name = "chasqui-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.100"
async-trait = "=0.1.89"
chrono = { version = "=0.4.42", features = ["serde"] }
derive_more = { version = "=2.1.0", features = ["display"] }
gray_matter = "=0.3.2"
pulldown-cmark = "=0.13.0"
pulldown-cmark-to-cmark = "22.0.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.138"
xxhash-rust = { version = "=0.8.15", features = ["xxh3"] }
walkdir = "=2.5.0"
image = "=0.25.5"
lofty = "=0.21.1"
mp4 = "=0.14.0"
uuid = { version = "=1.12.1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.17"
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }
