[package]
name = "chasqui-db"
version = "0.1.0"
edition = "2021"

[dependencies]
chasqui-core = { path = "../core" }
anyhow = "=1.0.100"
sqlx = { version = "=0.8.6", features = [
  "runtime-tokio",
  "tls-rustls-ring",
  "sqlite",
  "chrono",
  "uuid",
  "macros",
] }
chrono = { version = "=0.4.42", features = ["serde"] }
serde = { version = "=1.0.228", features = ["derive"] }
uuid = { version = "=1.12.1", features = ["v4", "serde"] }
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.17"
