[package]
name = "chasqui-server"
version = "0.1.0"
edition = "2021"

[dependencies]
chasqui-core = { path = "../core" }
chasqui-db = { path = "../db" }
anyhow = "=1.0.100"
async-trait = "=0.1.89"
axum = "=0.8.7"
dotenv = "=0.15.0"
http = "=1.2"
notify = "=8.2.0"
rand = "=0.9.0"
reqwest = { version = "=0.13.2", features = ["json", "rustls"], default-features = false }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.138"
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "=0.5.2", features = ["util"] }
uuid = { version = "=1.12.1", features = ["v4", "serde"] }
chrono = { version = "=0.4.42", features = ["serde"] }
xxhash-rust = { version = "=0.8.15", features = ["xxh3"] }
sqlx = { version = "=0.8.6", features = [
  "runtime-tokio",
  "tls-rustls-ring",
  "sqlite",
] }

[dev-dependencies]
chasqui-db = { path = "../db" }
tempfile = "3.17"
